--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-  <!--  ========== HEADER ==========  -->
+   <!-- ========== HEADER ==========  -->
 
   <header class="site-header">
     <div class="container top-container">
@@ -43,6 +43,9 @@
           </li>
         </ul>
       </address>
+      <button type="button" class="menu-mobile"><svg class="menu-icon" width="24" height="24" aria-label="menu icon">
+        <use href="./images/icons.svg#icon-burger"></use>
+      </svg></button>
     </div>
   </header>
 
@@ -59,9 +62,9 @@
           Effective Solutions
           for Your Business
         </h1>
-        <button type="button" class="order-page ">Order Service</button>
+        <button type="button" class="order-page">Order Service</button>
       </div>
-    </section>
+    </section> 
 
     <!--  ========== section 1 ==========  -->
 
@@ -119,7 +122,7 @@
     <!--  ========== section 2 ==========  -->
 
     <!--  ========== section 3 ==========  -->
-
+<!-- 
     <section class="personnel-page section">
       <div class="container">
         <h2 class="team-title">Our Team</h2>
@@ -274,12 +277,12 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
     <!--  ========== section 3 ==========  -->
 
     <!--  ========== section 4 ==========  -->
-    <section class="section">
+    <!-- <section class="section">
       <div class="container">
         <h2 class="portfolio-title">Our Portfolio</h2>
         <ul class="menu portfolio-list">
@@ -358,7 +361,7 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
     <!--  ========== section 4 ==========  -->
 
@@ -366,7 +369,7 @@
 
   <!--  ========== MAIN ==========  -->
   <!--  ========== FOOTER ==========  -->
-  <footer class="page-bottom">
+  <!-- <footer class="page-bottom">
     <div class="container page-footer-container">
       <div class="page-bottom-container">
         <a class="logo link logo-footer" href="./index.html">Web<span class="logo-bottom link">Studio</span></a>
@@ -424,13 +427,77 @@
         </form>
       </div>
     </div>
-  </footer>
+  </footer> -->
 
-  <!--  ========== FOOTER ==========  -->
+  <!--  ========== MENU MOBILE ==========  -->
+
+  <div class="backdrop">
+    <div class="backdrop-header-menu">
+      <button class="close-btn" type="button">
+        <svg class="close-btn-svg" width="8" height="8" aria-label="close button">
+          <use href="./images/icons.svg#icon-close-button"></use>
+        </svg>
+      </button>
+      <ul class="menu menu-mobile-header">
+        <li class="menu-mobile-item">
+          <a class="link current-mobile link-mobile-menu" href="./index.html">Studio</a>
+        </li>
+        <li class="menu-item">
+          <a class="link link-mobile-menu" href="">Portfolio</a>
+        </li>
+        <li class="menu-item">
+          <a class="link link-mobile-menu" href="">Contacts</a>
+        </li>
+      </ul>
+    </nav>
+    <address class="menu-mobile-address">
+      <ul class="site-menu-mobile">
+        <li>
+          <a href="mailto:info@devstudio.com" class="menu-mobile-link link">info@devstudio.com</a>
+        </li>
+        <li>
+          <a href="tel:+110001111111" class="menu-mobile-link link current-mobile">+11 (000) 111-11-11</a>
+        </li>
+      </ul>
+    </address>
+    </div>
+    <!-- <ul class="social-list-mobile">
+      <li class="social-list-item">
+        <a href="" class="social-list-link">
+          <svg class="social-list-icon" width="24" height="24" aria-label="instagram icon">
+            <use href="./images/icons.svg#icon-instagram"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="social-list-item">
+        <a href="" class="social-list-link">
+          <svg class="social-list-icon" width="24" height="24" aria-label="twitter icon">
+            <use href="./images/icons.svg#icon-twitter"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="social-list-item">
+        <a href="" class="social-list-link">
+          <svg class="social-list-icon" width="24" height="24" aria-label="facebook icon">
+            <use href="./images/icons.svg#icon-facebook"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="social-list-item">
+        <a href="" class="social-list-link">
+          <svg class="social-list-icon" width="24" height="24" aria-label="linkedin icon">
+            <use href="./images/icons.svg#icon-linkedin"></use>
+          </svg>
+        </a>
+      </li>
+    </ul> -->
+  </div>
+  
+  <!--  ========== MENU MOBILE ==========  -->
 
   <!--  ========== FORM ==========  -->
-
-  <div class="backdrop is-open">
+<!-- 
+  <div class="backdrop">
     <div class="form-page">
       <button class="close-btn" type="button">
         <svg class="close-btn-svg" width="8" height="8" aria-label="close button">
@@ -486,7 +553,7 @@
         <button class="rules-chekbox-btn" type="submit">Send</button>
       </form>
     </div>
-  </div>
+  </div> -->
 
   <!--  ========== FORM ==========  -->
 
