--- a/index.html
+++ b/index.html
@@ -369,7 +369,8 @@
 
   <!--  ========== MAIN ==========  -->
   <!--  ========== FOOTER ==========  -->
-  <!-- <footer class="page-bottom">
+  
+   <footer class="page-bottom">
     <div class="container page-footer-container">
       <div class="page-bottom-container">
         <a class="logo link logo-footer" href="./index.html">Web<span class="logo-bottom link">Studio</span></a>
@@ -427,72 +428,69 @@
         </form>
       </div>
     </div>
-  </footer> -->
+  </footer>
 
   <!--  ========== MENU MOBILE ==========  -->
-
-  <div class="backdrop">
-    <div class="backdrop-header-menu">
-      <button class="close-btn" type="button">
-        <svg class="close-btn-svg" width="8" height="8" aria-label="close button">
-          <use href="./images/icons.svg#icon-close-button"></use>
+<div class="backdrop-header-menu">
+  <button class="close-btn" type="button">
+    <svg class="close-btn-svg" width="8" height="8" aria-label="close button">
+      <use href="./images/icons.svg#icon-close-button"></use>
+    </svg>
+  </button>
+  <nav>
+    <ul class="menu menu-mobile-header">
+      <li class="menu-mobile-item">
+        <a class="link current-mobile link-mobile-menu" href="./index.html">Studio</a>
+      </li>
+      <li class="menu-item">
+        <a class="link link-mobile-menu" href="">Portfolio</a>
+      </li>
+      <li class="menu-item">
+        <a class="link link-mobile-menu" href="">Contacts</a>
+      </li>
+    </ul>
+  </nav>
+  <address class="menu-mobile-address">
+    <ul class="site-menu-mobile">
+      <li>
+        <a href="mailto:info@devstudio.com" class="menu-mobile-link link">info@devstudio.com</a>
+      </li>
+      <li>
+        <a href="tel:+110001111111" class="menu-mobile-link link current-mobile">+11 (000) 111-11-11</a>
+      </li>
+    </ul>
+  </address>
+  <ul class="social-list-mobile">
+    <li class="social-list-item">
+      <a href="" class="social-list-link">
+        <svg class="social-list-icon" width="24" height="24" aria-label="instagram icon">
+          <use href="./images/icons.svg#icon-instagram"></use>
         </svg>
-      </button>
-      <ul class="menu menu-mobile-header">
-        <li class="menu-mobile-item">
-          <a class="link current-mobile link-mobile-menu" href="./index.html">Studio</a>
-        </li>
-        <li class="menu-item">
-          <a class="link link-mobile-menu" href="">Portfolio</a>
-        </li>
-        <li class="menu-item">
-          <a class="link link-mobile-menu" href="">Contacts</a>
-        </li>
-      </ul>
-    </nav>
-    <address class="menu-mobile-address">
-      <ul class="site-menu-mobile">
-        <li>
-          <a href="mailto:info@devstudio.com" class="menu-mobile-link link">info@devstudio.com</a>
-        </li>
-        <li>
-          <a href="tel:+110001111111" class="menu-mobile-link link current-mobile">+11 (000) 111-11-11</a>
-        </li>
-      </ul>
-    </address>
-    </div>
-    <!-- <ul class="social-list-mobile">
-      <li class="social-list-item">
-        <a href="" class="social-list-link">
-          <svg class="social-list-icon" width="24" height="24" aria-label="instagram icon">
-            <use href="./images/icons.svg#icon-instagram"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="social-list-item">
-        <a href="" class="social-list-link">
-          <svg class="social-list-icon" width="24" height="24" aria-label="twitter icon">
-            <use href="./images/icons.svg#icon-twitter"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="social-list-item">
-        <a href="" class="social-list-link">
-          <svg class="social-list-icon" width="24" height="24" aria-label="facebook icon">
-            <use href="./images/icons.svg#icon-facebook"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="social-list-item">
-        <a href="" class="social-list-link">
-          <svg class="social-list-icon" width="24" height="24" aria-label="linkedin icon">
-            <use href="./images/icons.svg#icon-linkedin"></use>
-          </svg>
-        </a>
-      </li>
-    </ul> -->
-  </div>
-  
+      </a>
+    </li>
+    <li class="social-list-item">
+      <a href="" class="social-list-link">
+        <svg class="social-list-icon" width="24" height="24" aria-label="twitter icon">
+          <use href="./images/icons.svg#icon-twitter"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="social-list-item">
+      <a href="" class="social-list-link">
+        <svg class="social-list-icon" width="24" height="24" aria-label="facebook icon">
+          <use href="./images/icons.svg#icon-facebook"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="social-list-item">
+      <a href="" class="social-list-link">
+        <svg class="social-list-icon" width="24" height="24" aria-label="linkedin icon">
+          <use href="./images/icons.svg#icon-linkedin"></use>
+        </svg>
+      </a>
+    </li>
+  </ul>
+</div>
   <!--  ========== MENU MOBILE ==========  -->
 
   <!--  ========== FORM ==========  -->
