--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-   <!-- ========== HEADER ==========  -->
+  <!-- ========== HEADER ==========  -->
 
   <header class="site-header">
     <div class="container top-container">
@@ -44,8 +44,8 @@
         </ul>
       </address>
       <button type="button" class="menu-mobile"><svg class="menu-icon" width="24" height="24" aria-label="menu icon">
-        <use href="./images/icons.svg#icon-burger"></use>
-      </svg></button>
+          <use href="./images/icons.svg#icon-burger"></use>
+        </svg></button>
     </div>
   </header>
 
@@ -64,7 +64,7 @@
         </h1>
         <button type="button" class="order-page">Order Service</button>
       </div>
-    </section> 
+    </section>
 
     <!--  ========== section 1 ==========  -->
 
@@ -122,16 +122,14 @@
     <!--  ========== section 2 ==========  -->
 
     <!--  ========== section 3 ==========  -->
- 
+
     <section class="personnel-page section">
       <div class="container">
         <h2 class="team-title">Our Team</h2>
         <ul class="menu menu-team">
           <li class="menu-our-team">
-            <img 
-            srcset="./images/personnel/product-designer@2x.jpg 2x"
-            src="./images/personnel/product-designer.jpg" 
-            alt="product designer" width="264" height="260" />
+            <img srcset="./images/personnel/product-designer@2x.jpg 2x" src="./images/personnel/product-designer.jpg"
+              alt="product designer" width="264" height="260" />
             <div class="list-container">
               <h3 class="team-list">Mark Guerrero</h3>
               <p class="text-team-page">Product Designer</p>
@@ -168,10 +166,8 @@
             </div>
           </li>
           <li class="menu-our-team">
-            <img 
-            srcset="./images/personnel/frontend-developer@2x.jpg 2x"
-            src="./images/personnel/frontend-developer.jpg" 
-            alt="frontend developer" width="264" height="260" />
+            <img srcset="./images/personnel/frontend-developer@2x.jpg 2x"
+              src="./images/personnel/frontend-developer.jpg" alt="frontend developer" width="264" height="260" />
             <div class="list-container">
               <h3 class="team-list">Tom Ford</h3>
               <p class="text-team-page">Frontend Developer</p>
@@ -208,10 +204,8 @@
             </div>
           </li>
           <li class="menu-our-team">
-            <img 
-            srcset="./images/personnel/marketing@2x.jpg 2x"
-            src="./images/personnel/marketing.jpg" 
-            alt="marketing" width="264" height="260" />
+            <img srcset="./images/personnel/marketing@2x.jpg 2x" src="./images/personnel/marketing.jpg" alt="marketing"
+              width="264" height="260" />
             <div class="list-container">
               <h3 class="team-list">Camila Garcia</h3>
               <p class="text-team-page">Marketing</p>
@@ -248,9 +242,8 @@
             </div>
           </li>
           <li class="menu-our-team">
-            <img 
-            srcset="./images/personnel/ui-designer@2x.jpg 2x"
-            src="./images/personnel/ui-designer.jpg" alt="ui designer" width="264" height="260" />
+            <img srcset="./images/personnel/ui-designer@2x.jpg 2x" src="./images/personnel/ui-designer.jpg"
+              alt="ui designer" width="264" height="260" />
             <div class="list-container">
               <h3 class="team-list">Daniel Wilson</h3>
               <p class="text-team-page">UI Designer</p>
@@ -288,44 +281,32 @@
           </li>
         </ul>
       </div>
-    </section> 
+    </section>
 
     <!--  ========== section 3 ==========  -->
 
     <!--  ========== section 4 ==========  -->
-     <section class="section">
+    <section class="section">
       <div class="container">
         <h2 class="portfolio-title">Our Portfolio</h2>
         <ul class="menu portfolio-list">
           <li class="portfolio-list-item">
             <div class="hidden-container">
               <picture>
-                <source
-                 srcset="
+                <source srcset="
                  ./images/portfolio/bankingapp-pc.jpg 1x,
                  ./images/portfolio/bankingapp-pc@2x.jpg 2x
-                 "
-                 media="(min-width: 1158px)"
-                />
-                <source
-                 srcset="
+                 " media="(min-width: 1158px)" />
+                <source srcset="
                  ./images/portfolio/bankingapp-tablet.jpg  1x,
                  ./images/portfolio/bankingapp-tablet@2x.jpg 2x
-                 "
-                 media="(min-width: 768px)"
-                />
-                <source
-                 srcset="
+                 " media="(min-width: 768px)" />
+                <source srcset="
                  ./images/portfolio/bankingapp-mob.jpg  1x,
                  ./images/portfolio/bankingapp-mob@2x.jpg 2x
-                 "
-                 media="(max-width: 767px)"
-                />
-                <img
-                 src="./images/portfolio/bankingapp-mob.jpg"
-                 alt="portfolio picture"
-                />
-               </picture>
+                 " media="(max-width: 767px)" />
+                <img src="./images/portfolio/bankingapp-mob.jpg" alt="portfolio picture" />
+              </picture>
               <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
                 App ·
                 Exotic Fruit Ecommerce App · Cloud Storage App</p>
@@ -338,32 +319,20 @@
           <li class="portfolio-list-item">
             <div class="hidden-container">
               <picture>
-                <source
-                 srcset="
+                <source srcset="
                  ./images/portfolio/cashlesspayment-pc.jpg  1x,
                  ./images/portfolio/cashlesspayment-pc@2x.jpg 2x
-                 "
-                 media="(min-width: 1158px)"
-                />
-                <source
-                 srcset="
+                 " media="(min-width: 1158px)" />
+                <source srcset="
                  ./images/portfolio/cashlesspayment-tablet.jpg  1x,
                  ./images/portfolio/cashlesspayment-tablet@2x.jpg 2x
-                 "
-                 media="(min-width: 768px)"
-                />
-                <source
-                 srcset="
+                 " media="(min-width: 768px)" />
+                <source srcset="
                  ./images/portfolio/cashlesspayment-mob.jpg  1x,
                  ./images/portfolio/cashlesspayment-mob@2x.jpg 2x
-                 "
-                 media="(max-width: 767px)"
-                />
-                <img
-                 src="./images/portfolio/cashlesspayment-mob.jpg"
-                 alt="portfolio picture"
-                />
-               </picture>
+                 " media="(max-width: 767px)" />
+                <img src="./images/portfolio/cashlesspayment-mob.jpg" alt="portfolio picture" />
+              </picture>
               <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
                 App ·
                 Exotic Fruit Ecommerce App · Cloud Storage App</p>
@@ -376,32 +345,20 @@
           <li class="portfolio-list-item">
             <div class="hidden-container">
               <picture>
-                <source
-                 srcset="
+                <source srcset="
                  ./images/portfolio/meditationapp-pc.jpg  1x,
                  ./images/portfolio/meditationapp-pc@2x.jpg 2x
-                 "
-                 media="(min-width: 1158px)"
-                />
-                <source
-                 srcset="
+                 " media="(min-width: 1158px)" />
+                <source srcset="
                  ./images/portfolio/meditationapp-tablet.jpg  1x,
                  ./images/portfolio/meditationapp-tablet@2x.jpg 2x
-                 "
-                 media="(min-width: 768px)"
-                />
-                <source
-                 srcset="
+                 " media="(min-width: 768px)" />
+                <source srcset="
                  ./images/portfolio/meditationapp-mob.jpg  1x,
                  ./images/portfolio/meditationapp-mob@2x.jpg 2x
-                 "
-                 media="(max-width: 767px)"
-                />
-                <img
-                 src="./images/portfolio/meditationapp-mob.jpg"
-                 alt="portfolio picture"
-                />
-               </picture>
+                 " media="(max-width: 767px)" />
+                <img src="./images/portfolio/meditationapp-mob.jpg" alt="portfolio picture" />
+              </picture>
               <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
                 App ·
                 Exotic Fruit Ecommerce App · Cloud Storage App</p>
@@ -414,32 +371,20 @@
           <li class="portfolio-list-item">
             <div class="hidden-container">
               <picture>
-                <source
-                 srcset="
+                <source srcset="
                  ./images/portfolio/taxiservice-pc.jpg  1x,
                  ./images/portfolio/taxiservice-pc@2x.jpg 2x
-                 "
-                 media="(min-width: 1158px)"
-                />
-                <source
-                 srcset="
+                 " media="(min-width: 1158px)" />
+                <source srcset="
                  ./images/portfolio/taxiservice-tablet.jpg  1x,
                  ./images/portfolio/taxiservice-tablet@2x.jpg 2x
-                 "
-                 media="(min-width: 768px)"
-                />
-                <source
-                 srcset="
+                 " media="(min-width: 768px)" />
+                <source srcset="
                  ./images/portfolio/taxiservice-mob.jpg  1x,
                  ./images/portfolio/taxiservice-mob@2x.jpg 2x
-                 "
-                 media="(max-width: 767px)"
-                />
-                <img
-                 src="./images/portfolio/taxiservice-mob.jpg"
-                 alt="portfolio picture"
-                />
-               </picture>
+                 " media="(max-width: 767px)" />
+                <img src="./images/portfolio/taxiservice-mob.jpg" alt="portfolio picture" />
+              </picture>
               <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
                 App ·
                 Exotic Fruit Ecommerce App · Cloud Storage App</p>
@@ -452,32 +397,20 @@
           <li class="portfolio-list-item">
             <div class="hidden-container">
               <picture>
-                <source
-                 srcset="
+                <source srcset="
                  ./images/portfolio/screenillustrations-pc.jpg  1x,
                  ./images/portfolio/screenillustrations-pc@2x.jpg 2x
-                 "
-                 media="(min-width: 1158px)"
-                />
-                <source
-                 srcset="
+                 " media="(min-width: 1158px)" />
+                <source srcset="
                  ./images/portfolio/screenillustrations-tablet.jpg  1x,
                  ./images/portfolio/screenillustrations-tablet@2x.jpg 2x
-                 "
-                 media="(min-width: 768px)"
-                />
-                <source
-                 srcset="
+                 " media="(min-width: 768px)" />
+                <source srcset="
                  ./images/portfolio/screenillustrations-mob.jpg  1x,
                  ./images/portfolio/screenillustrations-mob@2x.jpg 2x
-                 "
-                 media="(max-width: 767px)"
-                />
-                <img
-                 src="./images/portfolio/screenillustrations-mob"
-                 alt="portfolio picture"
-                />
-               </picture>
+                 " media="(max-width: 767px)" />
+                <img src="./images/portfolio/screenillustrations-mob" alt="portfolio picture" />
+              </picture>
               <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
                 App ·
                 Exotic Fruit Ecommerce App · Cloud Storage App</p>
@@ -490,32 +423,20 @@
           <li class="portfolio-list-item">
             <div class="hidden-container">
               <picture>
-                <source
-                 srcset="
+                <source srcset="
                  ./images/portfolio/onlinecourses-pc.jpg  1x,
                  ./images/portfolio/onlinecourses-pc@2x.jpg 2x
-                 "
-                 media="(min-width: 1158px)"
-                />
-                <source
-                 srcset="
+                 " media="(min-width: 1158px)" />
+                <source srcset="
                  ./images/portfolio/onlinecourses-tablet.jpg  1x,
                  ./images/portfolio/onlinecourses-tablet@2x.jpg 2x
-                 "
-                 media="(min-width: 768px)"
-                />
-                <source
-                 srcset="
+                 " media="(min-width: 768px)" />
+                <source srcset="
                  ./images/portfolio/onlinecourses-mob.jpg  1x,
                  ./images/portfolio/onlinecourses-mob@2x.jpg 2x
-                 "
-                 media="(max-width: 767px)"
-                />
-                <img
-                 src="./images/portfolio/onlinecourses-mob.jpg"
-                 alt="portfolio picture"
-                />
-               </picture>
+                 " media="(max-width: 767px)" />
+                <img src="./images/portfolio/onlinecourses-mob.jpg" alt="portfolio picture" />
+              </picture>
               <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
                 App ·
                 Exotic Fruit Ecommerce App · Cloud Storage App</p>
@@ -535,8 +456,8 @@
 
   <!--  ========== MAIN ==========  -->
   <!--  ========== FOOTER ==========  -->
-  
-   <footer class="page-bottom">
+
+  <footer class="page-bottom">
     <div class="container page-footer-container">
       <div class="page-bottom-container">
         <a class="logo link logo-footer" href="./index.html">Web<span class="logo-bottom link">Studio</span></a>
@@ -597,66 +518,66 @@
   </footer>
 
   <!--  ========== MENU MOBILE ==========  -->
-<div class="backdrop-header-menu">
-  <button class="close-btn" type="button">
-    <svg class="close-btn-svg" width="8" height="8" aria-label="close button">
-      <use href="./images/icons.svg#icon-close-button"></use>
-    </svg>
-  </button>
-  <nav>
-    <ul class="menu menu-mobile-header">
-      <li class="menu-mobile-item">
-        <a class="link current-mobile link-mobile-menu" href="./index.html">Studio</a>
+  <div class="backdrop-header-menu">
+    <button class="close-btn" type="button">
+      <svg class="close-btn-svg" width="8" height="8" aria-label="close button">
+        <use href="./images/icons.svg#icon-close-button"></use>
+      </svg>
+    </button>
+    <nav>
+      <ul class="menu menu-mobile-header">
+        <li class="menu-mobile-item">
+          <a class="link current-mobile link-mobile-menu" href="./index.html">Studio</a>
+        </li>
+        <li class="menu-item">
+          <a class="link link-mobile-menu" href="">Portfolio</a>
+        </li>
+        <li class="menu-item">
+          <a class="link link-mobile-menu" href="">Contacts</a>
+        </li>
+      </ul>
+    </nav>
+    <address class="menu-mobile-address">
+      <ul class="site-menu-mobile">
+        <li>
+          <a href="mailto:info@devstudio.com" class="menu-mobile-link link">info@devstudio.com</a>
+        </li>
+        <li>
+          <a href="tel:+110001111111" class="menu-mobile-link link current-mobile">+11 (000) 111-11-11</a>
+        </li>
+      </ul>
+    </address>
+    <ul class="social-list-mobile">
+      <li class="social-list-item">
+        <a href="" class="social-list-link">
+          <svg class="social-list-icon" width="24" height="24" aria-label="instagram icon">
+            <use href="./images/icons.svg#icon-instagram"></use>
+          </svg>
+        </a>
       </li>
-      <li class="menu-item">
-        <a class="link link-mobile-menu" href="">Portfolio</a>
+      <li class="social-list-item">
+        <a href="" class="social-list-link">
+          <svg class="social-list-icon" width="24" height="24" aria-label="twitter icon">
+            <use href="./images/icons.svg#icon-twitter"></use>
+          </svg>
+        </a>
       </li>
-      <li class="menu-item">
-        <a class="link link-mobile-menu" href="">Contacts</a>
+      <li class="social-list-item">
+        <a href="" class="social-list-link">
+          <svg class="social-list-icon" width="24" height="24" aria-label="facebook icon">
+            <use href="./images/icons.svg#icon-facebook"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="social-list-item">
+        <a href="" class="social-list-link">
+          <svg class="social-list-icon" width="24" height="24" aria-label="linkedin icon">
+            <use href="./images/icons.svg#icon-linkedin"></use>
+          </svg>
+        </a>
       </li>
     </ul>
-  </nav>
-  <address class="menu-mobile-address">
-    <ul class="site-menu-mobile">
-      <li>
-        <a href="mailto:info@devstudio.com" class="menu-mobile-link link">info@devstudio.com</a>
-      </li>
-      <li>
-        <a href="tel:+110001111111" class="menu-mobile-link link current-mobile">+11 (000) 111-11-11</a>
-      </li>
-    </ul>
-  </address>
-  <ul class="social-list-mobile">
-    <li class="social-list-item">
-      <a href="" class="social-list-link">
-        <svg class="social-list-icon" width="24" height="24" aria-label="instagram icon">
-          <use href="./images/icons.svg#icon-instagram"></use>
-        </svg>
-      </a>
-    </li>
-    <li class="social-list-item">
-      <a href="" class="social-list-link">
-        <svg class="social-list-icon" width="24" height="24" aria-label="twitter icon">
-          <use href="./images/icons.svg#icon-twitter"></use>
-        </svg>
-      </a>
-    </li>
-    <li class="social-list-item">
-      <a href="" class="social-list-link">
-        <svg class="social-list-icon" width="24" height="24" aria-label="facebook icon">
-          <use href="./images/icons.svg#icon-facebook"></use>
-        </svg>
-      </a>
-    </li>
-    <li class="social-list-item">
-      <a href="" class="social-list-link">
-        <svg class="social-list-icon" width="24" height="24" aria-label="linkedin icon">
-          <use href="./images/icons.svg#icon-linkedin"></use>
-        </svg>
-      </a>
-    </li>
-  </ul>
-</div>
+  </div>
   <!--  ========== MENU MOBILE ==========  -->
 
   <!--  ========== FORM ==========  -->
@@ -711,7 +632,8 @@
                 <use href="./images/icons.svg#icon-chekbox"></use>
               </svg>
             </span>
-            <span class="text-rules">I accept the terms and conditions of the <a class="rules-link" href="">Privacy Policy</a></span>
+            <span class="text-rules">I accept the terms and conditions of the <a class="rules-link" href="">Privacy
+                Policy</a></span>
           </label>
         </div>
         <button class="rules-chekbox-btn" type="submit">Send</button>
